Updated layout: Adjusted button placement with images, improved responsiveness

--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A Valentine's Day message to express appreciation.">
   <title>Be My Valentine</title>
+
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- External Stylesheet -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Background Images -->
-  <div class="background-images">
-    <img src="images/mini_golf.png" alt="Mini Golf" class="bg-image" style="top: 10%; left: 10%;">
-    <img src="images/chicken_parmesan.avif" alt="Chicken Parmesan" class="bg-image" style="top: 50%; left: 5%;">
-    <img src="images/Epic_Chophouse_logo.png" alt="Epic Chophouse Logo" class="bg-image" style="top: 20%; right: 10%;">
-  </div>
 
   <!-- Main Content -->
   <div class="main-content">
     <h1>I'm So Lucky to Know You</h1>
     <p>I just wanted to take a moment to show my appreciation in the best way I know how.</p>
-    <p>You bring so much <span>light</span> and <span>joy</span> into my life, and I’m truly grateful for you.</p>
+    <p>You make life a little better just by being in it, and I’m grateful for that.</p>
     <p><strong>I’d be honored to call you my Valentine this year.</strong></p>
     <p>What do you say?</p>
-    <a href="#" class="button">Yes, I’ll Be Your Valentine!</a>
+
+    <!-- Button with Images on Each Side -->
+    <div class="button-container">
+        <img src="images/mini_golf.png" alt="Mini Golf" class="side-image">
+        <a href="#" class="button">Yes, I’ll Be Your Valentine!</a>
+        <img src="images/chicken_parmesan.avif" alt="Chicken Parmesan" class="side-image">
+    </div>
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>❤️ Happy Valentine's Day 2025 ❤️</p>
+    <p>— Happy Valentine's Day 2025 —</p>
     <p>&copy; 2025 Alex Leet. All rights reserved.</p>
   </footer>  
 
+  <!-- External Script -->
   <script src="script.js"></script>
 </body>
 </html>
