Improved mobile layout: Ensured images stay side by side and optimized spacing

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <p><strong>I’d be honored to call you my Valentine this year.</strong></p>
     <p>What do you say?</p>
 
-    <!-- Button with Images on Each Side -->
-    <div class="button-container">
+    <!-- Images Positioned Between Text and Button -->
+    <div class="image-row">
         <img src="images/mini_golf.png" alt="Mini Golf" class="side-image">
-        <a href="#" class="button">Yes, I’ll Be Your Valentine!</a>
         <img src="images/chicken_parmesan.avif" alt="Chicken Parmesan" class="side-image">
     </div>
+
+    <!-- Button Below Images -->
+    <a href="#" class="button">Yes, I’ll Be Your Valentine!</a>
   </div>
 
   <!-- Footer -->
