--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Be My Valentine</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   
   <!-- External Stylesheet -->
   <link rel="stylesheet" href="styles.css">
