Enhanced website with soft shadows, rounded corners, and added pop-up feature

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
   <footer>
     <p>— Happy Valentine's Day 2025 —</p>
     <p>&copy; 2025 Alex Leet. All rights reserved.</p>
-  </footer>  
+  </footer>
+  
+  <!-- Pop-up Modal -->
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <!-- Content will be inserted dynamically by JavaScript -->
+    </div>
+  </div>
 
   <!-- External Script -->
   <script src="script.js"></script>
